<resources>
    <string name="app_name">MJPRU APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_slide_title">MJPRU University</string>
    <string name="second_slide_title">Upload Notice</string>
    <string name="third_slide_title">Gallery Images</string>
    <string name="first_slide_desc">You can easily access all the features of University website through this App</string>
    <string name="second_slide_desc">Admin Upload Important notice through this App</string>
    <string name="third_slide_desc">You can easily Upload Gallery Images of Different Types</string>
    <string name="fourth_slide_title">Important Links</string>
    <string name="fourth_slide_desc">You can easily access important Links of MJPRU University website links</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_passward_details">Provide your account Phone Number for which you want to reset your password!</string>
    <string name="next_btn">Next</string>
    <string name="skip_btn">Skip</string>
    <string name="let_get_started_btn">Let\'s Start</string>
    <string name="enter_username">Enter User Name</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="passwordonly">Password</string>
    <string name="login_image">Login Image</string>
    <string name="news_book">News Book</string>
    <string name="login_desc">Login Description</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_we_work">How We Work</string>
    <string name="phone_number">Phone Number</string>
    <string name="signinbtn">signin btn</string>
    <string name="toggle_menu_btn_for_navigationview">toggle btn</string>
    <string name="otp_description_text">otp_description</string>
    <string name="powered_by_mwi7">Powered by mwi7</string>
    <string name="splash_screen">splash screen</string>
    <string name="enjoy_every_moment_don_t_wait_for_yesterday">enjoy every moment dont\'t wait for yesterday</string>
    <string name="privacy">privacy</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="feedback">feedback</string>
    <string name="rate_us">rate us</string>
    <string name="share_app">share app</string>
    <string name="community">community</string>
    <string name="language">language</string>
    <string name="home">home</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="profile">Profile</string>

    <!--String for dashboard -->

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>