<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".common.LoginSignup.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forget_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/forget_password_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/forget_password_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_passward_details"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black_italic"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/forget_password_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/forget_password_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                android:background="@drawable/black_border"
                android:padding="5dp"
                app:ccp_showFullName="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forget_password_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/forget_password_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn"
            android:textColor="@color/black"
            android:background="@color/purple_500"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="verifyPhoneNumber"
            />

    </LinearLayout>

</ScrollView>













